Ignored sonar issue